# datev-lint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  datev-lint-spec-v2.1.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  release.yml
.specify/memory/: constitution.md
datev_lint/: __init__.py
datev_lint/cli/: __init__.py  context.py  main.py
datev_lint/cli/commands/: __init__.py
datev_lint/cli/output/: __init__.py  base.py  json.py  junit.py  sarif.py  terminal.py
datev_lint/core/: __init__.py
datev_lint/core/fix/: __init__.py  audit.py  backup.py  conflicts.py  models.py  operations.py  planner.py  preview.py  risk.py  writer.py
datev_lint/core/licensing/: __init__.py  expiry.py  gates.py  loader.py  models.py  verifier.py
datev_lint/core/parser/: __init__.py  columns.py  dates.py  detector.py  encoding.py  errors.py  field_dict.py  field_dictionary.yaml  header.py  models.py  rows.py  tokenizer.py
datev_lint/core/rules/: __init__.py  constraints.py  loader.py  models.py  pipeline.py  registry.py
datev_lint/rules/: base.yaml
datev_lint/rules/profiles/: de.skr03.default.yaml  default.yaml
scripts/: pin_github_actions.py
specs/001-parser-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-parser-core/contracts/: parser_api.py
specs/002-rule-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cli-outputs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-licensing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
tests/fixtures/fix/: after_belegfeld_fix.csv  before_belegfeld_fix.csv
tests/fixtures/golden/: broken_quotes.csv  embedded_newlines.csv  encoding_utf8_bom.csv  encoding_windows1252.csv  invalid_fields.csv  leading_zero_konto.csv  valid_minimal_700.csv
tests/fixtures/licenses/: expired.json  valid_pro.json
tests/integration/: test_integration_dir.py
tests/unit/: test_cli_main.py  test_cli_output.py  test_dates.py  test_encoding.py  test_fix_audit.py  test_fix_backup.py  test_fix_conflicts.py  test_fix_operations.py  test_fix_planner.py  test_fix_preview.py  test_fix_risk.py  test_license_verifier.py  test_licensing.py  test_parser.py  test_rules.py  test_tokenizer.py  test_tokenizer_fuzz.py
